--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -14,13 +14,13 @@ set(BIL_OXYGEN_DIR  ${CMAKE_CURRENT_SOURCE_DIR}/oxygen)
 #=======================================================================
 # Target rules for the reference manual in different formats
 if(UNIX AND NOT CYGWIN)
-  install(FILES ${BIL_DOC}.1 DESTINATION ${BIL_INSTALL_MANDIR})
+  install(FILES ${BIL_DOC}.1 DESTINATION ${BIL_INSTALL_FULL_MAN1DIR})
 endif()
 
 add_custom_target(doc DEPENDS pdf txt html info doxy)
 
 set_directory_properties(PROPERTIES
-  ADDITIONAL_CLEAN_FILES "${BIL_EDITION_DIR}/${BIL_DOC}.aux;${BIL_EDITION_DIR}/${BIL_DOC}.cp;${BIL_EDITION_DIR}/${BIL_DOC}.cps;${BIL_EDITION_DIR}/${BIL_DOC}.html;${BIL_EDITION_DIR}/${BIL_DOC}.info;${BIL_EDITION_DIR}/${BIL_DOC}.log;${BIL_EDITION_DIR}/${BIL_DOC}.pdf;${BIL_EDITION_DIR}/${BIL_DOC}.toc;${BIL_EDITION_DIR}/${BIL_DOC}.tp;${BIL_EDITION_DIR}/${BIL_DOC}.txt;${BIL_OXYGEN_DIR}/${BIL_DOC}.doxy"
+  ADDITIONAL_CLEAN_FILES "${BIL_EDITION_DIR}/${BIL_DOC}.aux;${BIL_EDITION_DIR}/${BIL_DOC}.cp;${BIL_EDITION_DIR}/${BIL_DOC}.cps;${BIL_EDITION_DIR}/${BIL_DOC}.html;${BIL_EDITION_DIR}/${BIL_DOC}.info;${BIL_EDITION_DIR}/${BIL_DOC}.log;${BIL_EDITION_DIR}/${BIL_DOC}.pdf;${BIL_EDITION_DIR}/${BIL_DOC}.toc;${BIL_EDITION_DIR}/${BIL_DOC}.tp;${BIL_EDITION_DIR}/${BIL_DOC}.txt;${BIL_OXYGEN_DIR}/${BIL_DOC}.doxy;${CMAKE_CURRENT_SOURCE_DIR}/${BIL_DOC}.pdf;${CMAKE_CURRENT_SOURCE_DIR}/${BIL_DOC}.txt;${CMAKE_CURRENT_SOURCE_DIR}/${BIL_DOC}.html"
 )
 
 
@@ -35,7 +35,7 @@ if(TEXI2PDF)
     COMMAND ${CMAKE_COMMAND} -E copy ${BIL_DOC}.pdf ..
     WORKING_DIRECTORY ${BIL_EDITION_DIR})
   add_custom_target(pdf DEPENDS ${BIL_DOC}.pdf)
-  install(FILES ${BIL_EDITION_DIR}/${BIL_DOC}.pdf DESTINATION ${BIL_INSTALL_DOCDIR} OPTIONAL)
+  install(FILES ${BIL_EDITION_DIR}/${BIL_DOC}.pdf DESTINATION ${BIL_INSTALL_FULL_DOCDIR} OPTIONAL)
 endif()
 
 
@@ -47,7 +47,7 @@ if(MAKEINFO)
     COMMAND ${MAKEINFO} --enable-encoding -o ${BIL_DOC}.info ${BIL_DOC}.texi
     WORKING_DIRECTORY ${BIL_EDITION_DIR})
   add_custom_target(info DEPENDS ${BIL_DOC}.info)
-  install(FILES ${BIL_EDITION_DIR}/${BIL_DOC}.info DESTINATION ${BIL_INSTALL_INFODIR} OPTIONAL)
+  install(FILES ${BIL_EDITION_DIR}/${BIL_DOC}.info DESTINATION ${BIL_INSTALL_FULL_INFODIR} OPTIONAL)
   
   add_custom_command(OUTPUT ${BIL_DOC}.txt 
     DEPENDS ${BIL_EDITION_DIR}/${BIL_DOC}.texi
@@ -62,7 +62,7 @@ if(MAKEINFO)
     COMMAND ${CMAKE_COMMAND} -E copy ${BIL_DOC}.html ..
     WORKING_DIRECTORY ${BIL_EDITION_DIR})
   add_custom_target(html DEPENDS ${BIL_DOC}.html)
-  install(FILES ${BIL_EDITION_DIR}/${BIL_DOC}.html DESTINATION ${BIL_INSTALL_DOCDIR} OPTIONAL)
+  install(FILES ${BIL_EDITION_DIR}/${BIL_DOC}.html DESTINATION ${BIL_INSTALL_FULL_DOCDIR} OPTIONAL)
 endif()
 
 
