--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,12 +28,12 @@ target_compile_features(${BIL_LIB}
 
 set_target_properties(${BIL_LIB}
   PROPERTIES 
-  #INSTALL_RPATH "${BIL_INSTALL_LIBDIR}"
+  #INSTALL_RPATH "${BIL_INSTALL_FULL_LIBDIR}"
   LIBRARY_OUTPUT_DIRECTORY ${BIL_LIBDIR}
 )
 
 install(TARGETS ${BIL_LIB}
-  DESTINATION ${BIL_INSTALL_LIBDIR}
+  DESTINATION ${BIL_INSTALL_FULL_LIBDIR}
   LIBRARY OPTIONAL)
 
 
@@ -61,7 +61,7 @@ target_compile_features(${BIL_EXE}
 
 set_target_properties(${BIL_EXE}
   PROPERTIES 
-  INSTALL_RPATH "${BIL_INSTALL_LIBDIR}"
+  INSTALL_RPATH "${BIL_INSTALL_FULL_LIBDIR}"
   RUNTIME_OUTPUT_DIRECTORY ${BIL_BINDIR}
 )
 
@@ -72,13 +72,13 @@ target_link_options(${BIL_EXE}
 )
 
 install(TARGETS ${BIL_EXE}
-  DESTINATION ${BIL_INSTALL_BINDIR}
+  DESTINATION ${BIL_INSTALL_FULL_BINDIR}
   RUNTIME OPTIONAL)
 
 
 
 install(CODE
-  "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink ${BIL_INSTALL_BINDIR}/${BIL_EXE} ${BIL_INSTALL_BINDIR}/bil)"
+  "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink ${BIL_INSTALL_FULL_BINDIR}/${BIL_EXE} ${BIL_INSTALL_FULL_BINDIR}/bil)"
 )
  
 
