--- a/doc/Makefile
+++ b/doc/Makefile
@@ -20,8 +20,8 @@ export BIL_DOC
 DOC_DIRS = ${BIL_EDITION_DIR} oxygen
 
 all:
-	cd ${BIL_EDITION_DIR} && rm -f versions.texi
-	cd ${BIL_EDITION_DIR} && echo "@set BIL-VERSION   ${BIL_VERSION}" > versions.texi
+	cd ${BIL_EDITION_DIR} && rm -f version.texi
+	cd ${BIL_EDITION_DIR} && echo "@set BIL-VERSION   ${BIL_VERSION}" > version.texi
 	for i in ${DOC_DIRS}; do (cd $$i && ${MAKE} all); done
 	cd ${BIL_EDITION_DIR} && mv ${BIL_DOC}.ps ..
 	cd ${BIL_EDITION_DIR} && mv ${BIL_DOC}.pdf ..
@@ -34,8 +34,8 @@ all:
 # Target rules for the reference manual in different formats
 
 doc:
-	cd ${BIL_EDITION_DIR} && rm -f versions.texi
-	cd ${BIL_EDITION_DIR} && echo "@set BIL-VERSION   ${BIL_VERSION}" > versions.texi
+	cd ${BIL_EDITION_DIR} && rm -f version.texi
+	cd ${BIL_EDITION_DIR} && echo "@set BIL-VERSION   ${BIL_VERSION}" > version.texi
 	cd ${BIL_EDITION_DIR} && ${MAKE} all
 	cd ${BIL_EDITION_DIR} && mv ${BIL_DOC}.ps ..
 	cd ${BIL_EDITION_DIR} && mv ${BIL_DOC}.pdf ..
@@ -62,7 +62,7 @@ clean:
 clean-all: clean
 	rm -f ${BIL_DOC}.ps ${BIL_DOC}.pdf ${BIL_DOC}.txt
 	rm -rf ${BIL_DOC}.html 
-	rm -rf ${BIL_EDITION_DIR}/versions.texi
+	rm -rf ${BIL_EDITION_DIR}/version.texi
 	for i in ${DOC_DIRS}; do (cd $$i && ${MAKE} clean-all); done
 
 install-doc:
