fixed bugs in BBM

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,7 +22,7 @@ target_compile_features(${BIL_LIB}
 
 set_target_properties(${BIL_LIB}
   PROPERTIES 
-  #INSTALL_RPATH "${BIL_INSTALL_FULL_LIBDIR}"
+  INSTALL_RPATH "${BILEXTRALIBS_INSTALL_RPATH}"
   LIBRARY_OUTPUT_DIRECTORY ${BIL_LIBDIR}
 )
 
@@ -66,7 +66,7 @@ target_compile_features(${BIL_EXE}
 
 set_target_properties(${BIL_EXE}
   PROPERTIES 
-  INSTALL_RPATH "${BILEXTRALIBS_INSTALL_RPATH}"
+  INSTALL_RPATH "${BIL_INSTALL_FULL_LIBDIR}"
   RUNTIME_OUTPUT_DIRECTORY ${BIL_BINDIR}
 )
 
